Use custom base image.

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
   <properties>
     <spring-boot.version>1.4.1.RELEASE</spring-boot.version>
     <tomcat.version>8.5.4</tomcat.version>
+    <fabric8.generator.from>docker.io/jerboaa/fabric8-openjdk8-base:0.0.3</fabric8.generator.from>
   </properties>
 
   <dependencyManagement>
